fix not open user dropdown on mobile

--- a/src/app/components/user/user-info/user-info.component.css
+++ b/src/app/components/user/user-info/user-info.component.css
@@ -7,3 +7,7 @@
   cursor: pointer;
   color: #0069d9;
 }
+
+a[href] {
+  color: black !important;
+}
